# coding-game-service

./: .gitignore  Makefile.am  autogen.sh  coding-game-service.js  com.endlessm.Coding.policy.in  com.endlessm.CodingGameService.gresource.xml  com.endlessm.CodingGameService.service.in  com.endlessm.CodingGameService.xml  configure.ac  edit-desktop-file.js  jasmine.json
data/: timeline.json.unvalidated.in
debian/: coding-game-service.install  control  libcoding-game-service-0-dev.install  libcoding-game-service-0.install
docs/: events.md  game-manager.md  overview.md  showmehow.md  timeline.md
files/: classes.py  coding-copy-files.js.in  coding-shared-dir.in  coding-terminal.desktop  eos-shell-extension-prefs.desktop  functions.py  line.pde  martian.pde  org.processing.App.desktop  showmehow-terminal
files/line/: line.pde
files/python-functions-fs/: functions.py
files/wave/: wave.pde
lib/: communicator.js  config.js.in  controller.js  desktopFile.js  log.js  service.js  shellAppStore.js  shim.c  shim.h  validation.js
mocks/: constructors.js
tests/js/: testCodingGameService.js  testCodingGameServiceTimeline.js
